Add a navigation bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Bella's Portofolio</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-brand">
+            <h4>Bella Amandine</h4>
+        </div>
+        <div class="nav-content">
+            <ul>
+                <li class="nav-list"><a href="#">HOME</a></li>
+                <li class="nav-list"><a href="#">MY PROJECTS</a></li>
+                <li class="nav-list"><a href="#">ABOUT ME</a></li>
+                <li class="nav-list"><a href="#">CONTACT</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
