Add my-description class to div inside heading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
     <heading>
-        <div>
+        <div id="my-description">
             <h1>Hi,</h1>
             <h1>I am Bella Amandine Muhorakeye,</h1>
             <h1>Web Developer</h1>
