Style heading section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </div>
     </nav>
-    <heading>
+    <div id="home-section">
         <div id="my-description">
             <h1>Hi,</h1>
             <h1>I am Bella Amandine Muhorakeye,</h1>
@@ -29,6 +29,6 @@
             <a href="#">Contact Me</a>
         </div>
         <img src="https://images.unsplash.com/photo-1519699047748-de8e457a634e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="profile picture" width="300">
-    </heading>
+    </div>
 </body>
 </html>
