Edit class-name of heading section in index.html and styles.css files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </div>
     </nav>
-    <div id="home-section">
+    <div id="heading-section">
         <div id="my-description">
             <h1>Hi,</h1>
             <h1>I am Bella Amandine Muhorakeye,</h1>
