Edit index.html and style project-section

--- a/index.html
+++ b/index.html
@@ -31,27 +31,28 @@
         <img src="https://images.unsplash.com/photo-1519699047748-de8e457a634e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="profile picture" width="300">
     </div>
     <div id="project-section">
+        <h2>My Projects</h2>
         <ul>
             <li>
                 <h1>My Kitchen Project</h1>
                 <p>My Kitchen Project is a website I made when I was learning HTML and CSS.
                     It is to meant to show some recepe to the website visitors.
                 </p>
-                <a href="http://Bella-Amandine.github.io/my-kitchen-project" target="_blank">My Kitchen Demo</a>
+                <a class="project-link" href="http://Bella-Amandine.github.io/my-kitchen-project" target="_blank">My Kitchen Demo</a>
             </li>
             <li>
                 <h1>Glozom</h1>
                 <p>Glozom is a template I made when I was learning Bootstrap.
                     It is made of HTML, CSS, and Bootsrap
                 </p>
-                <a href="http://Bella-803.github.io/glozzom" target="_blank">Glozom Template Demo</a>
+                <a class="project-link"href="http://Bella-803.github.io/glozzom" target="_blank">Glozom Template Demo</a>
             </li>
             <li>
                 <h1>Blogen</h1>
                 <p>Blogen is a dashboard template I made when I was learning bootstrap.
                     It is made of HTML, CSS, Bootstrap
                 </p>
-                <a href="http://Bella-803.github.io/Blogen-Template" target="_blank">Blogen Template Demo</a>
+                <a class="project-link" href="http://Bella-803.github.io/Blogen-Template" target="_blank">Blogen Template Demo</a>
             </li>
         </ul>
     </div>
