--- a/index.html
+++ b/index.html
@@ -56,5 +56,12 @@
             </li>
         </ul>
     </div>
+    <div id="about-section">
+        <h1>About Me</h1>
+        <div>
+            <p>A student at Adventist University of Central Africa, currently following a training at Moringa School</p>
+            <p>Interested in entire software development.Pleased to make things that can be useful to other people</p>
+        </div>
+    </div>
 </body>
 </html>
