Edit about-me section in index.html and style about-me section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1>About Me</h1>
         <div>
             <p>A student at Adventist University of Central Africa, currently following a training at Moringa School</p>
-            <p>Interested in entire software development.Pleased to make things that can be useful to other people</p>
+            <p>I am interested in entire software development, and leased to make things that can be useful to other people</p>
         </div>
     </div>
 </body>
