Add contact section

--- a/index.html
+++ b/index.html
@@ -63,5 +63,14 @@
             <p>I am interested in entire software development, and leased to make things that can be useful to other people</p>
         </div>
     </div>
+    <div id="contact">
+        <div class="dark-overlay">
+            <h1>Contact me on</h1>
+            <div>
+                <p>Telephone Number : <strong>+250782393932</strong></p>
+                <p>Email : <strong>bella@example.com</strong></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
