--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
     <div id="about-section">
         <h1>About Me</h1>
         <div>
-            <p>A student at Adventist University of Central Africa, currently following a training at Moringa School</p>
-            <p>I am interested in entire software development, and leased to make things that can be useful to other people</p>
+            <p>I am motivated and hardworking student at Adventist University of Central Africa, 
+                and currently following a training at Moringa School</p>
+            <p>I am interested in entire software development, and pleased to make things that can be useful to other people. 
+               This was the main reason that pushed me to take a class on programming
+            </p>
         </div>
     </div>
     <div id="contact">
