Edit navigation bar style

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         </div>
         <div class="nav-content">
             <ul>
-                <li class="nav-list"><a href="#">HOME</a></li>
-                <li class="nav-list"><a href="#">MY PROJECTS</a></li>
-                <li class="nav-list"><a href="#">ABOUT ME</a></li>
-                <li class="nav-list"><a href="#">CONTACT</a></li>
+                <li class="nav-list"><a href="#heading-section">HOME</a></li>
+                <li class="nav-list"><a href="#project-section">MY PROJECTS</a></li>
+                <li class="nav-list"><a href="#about-section">ABOUT ME</a></li>
+                <li class="nav-list"><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
     </nav>
