--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>I am Bella Amandine Muhorakeye,</h1>
             <h1>Web Developer</h1>
             <p>Front End Developer</p>
-            <a href="#">Contact Me</a>
+            <a href="#contact">Contact Me</a>
         </div>
         <img src="https://images.unsplash.com/photo-1519699047748-de8e457a634e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="profile picture" width="300">
     </div>
